syntax = "proto3";

package movie;

message Pair {
  string key = 1;
  string value = 2;
}

message RatesOutput {
  repeated Pair pairs = 1;
}

message RateInput {
  string pairs = 1;
}

service RateService {
  rpc GetRates (RateInput) returns (RatesOutput) {}
}
